; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/gist/extr_gistbuild.c_gistGetMaxLevel.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/gist/extr_gistbuild.c_gistGetMaxLevel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@GIST_ROOT_BLKNO = common dso_local global i32 0, align 4
@GIST_SHARE = common dso_local global i32 0, align 4
@FirstOffsetNumber = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @gistGetMaxLevel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gistGetMaxLevel(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_2__*, align 8
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %8 = load i32, i32* @GIST_ROOT_BLKNO, align 4
  store i32 %8, i32* %4, align 4
  br label %9

9:                                                ; preds = %1, %24
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @ReadBuffer(i32 %10, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @GIST_SHARE, align 4
  %15 = call i32 @LockBuffer(i32 %13, i32 %14)
  %16 = load i32, i32* %5, align 4
  %17 = call i64 @BufferGetPage(i32 %16)
  store i64 %17, i64* %6, align 8
  %18 = load i64, i64* %6, align 8
  %19 = call i64 @GistPageIsLeaf(i64 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %9
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @UnlockReleaseBuffer(i32 %22)
  br label %38

24:                                               ; preds = %9
  %25 = load i64, i64* %6, align 8
  %26 = load i64, i64* %6, align 8
  %27 = load i32, i32* @FirstOffsetNumber, align 4
  %28 = call i32 @PageGetItemId(i64 %26, i32 %27)
  %29 = call i64 @PageGetItem(i64 %25, i32 %28)
  %30 = inttoptr i64 %29 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %30, %struct.TYPE_2__** %7, align 8
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = call i32 @ItemPointerGetBlockNumber(i32* %32)
  store i32 %33, i32* %4, align 4
  %34 = load i32, i32* %5, align 4
  %35 = call i32 @UnlockReleaseBuffer(i32 %34)
  %36 = load i32, i32* %3, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %3, align 4
  br label %9

38:                                               ; preds = %21
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32 @ReadBuffer(i32, i32) #1

declare dso_local i32 @LockBuffer(i32, i32) #1

declare dso_local i64 @BufferGetPage(i32) #1

declare dso_local i64 @GistPageIsLeaf(i64) #1

declare dso_local i32 @UnlockReleaseBuffer(i32) #1

declare dso_local i64 @PageGetItem(i64, i32) #1

declare dso_local i32 @PageGetItemId(i64, i32) #1

declare dso_local i32 @ItemPointerGetBlockNumber(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
